contact page and alignment issues adjusted

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -626,10 +626,10 @@ header::before {
 }
 
 /************ Headings *******************/
-
-.content-heading {
+.main-hero{
 	padding-top: 150px;
 }
+
 
 
 /************ The Work Sections *******************/
@@ -648,4 +648,63 @@ header::before {
     height: auto;
 }
 
+/************ Contact Page ***************/
+
+input[type=text] {
+    padding: 15px;
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    color: #444;
+    border: 0;
+    background: #f6f6f6;
+    border-radius: 2px;
+	margin: 10px 0px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+}
+input[type=text]:focus {
+    border-color: #222;
+}
+textarea {
+    width: 100%;
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    padding: 15px;
+    border: 0;
+   margin: 10px 0px;
+    background: #f6f6f6;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+	height: 175px;
+}
+
+textarea {
+    overflow: auto;
+    margin-top: 10px;
+}
+
+input[type=submit] {
+    font-family: inherit;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    color: #fff;
+    background: #222;
+    padding: 1.4em 2.5em;
+    border: 0;
+	width: 100%;
+    margin: 15px 0 0;
+    -webkit-transition: background-color 250ms linear, border 250ms linear, color 250ms linear;
+    -moz-transition: background-color 250ms linear, border 250ms linear, color 250ms linear;
+    -o-transition: background-color 250ms linear, border 250ms linear, color 250ms linear;
+    -ms-transition: background-color 250ms linear, border 250ms linear, color 250ms linear;
+    transition: background-color 250ms linear, border 250ms linear, color 250ms linear;
+    border-radius: 1px;
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+}
 /************ Footer *******************/
